2009-02-26  Sebastian Pop  <sebastian.pop@amd.com>

PR middle-end/39308
	* graphite-clast-to-gimple.c (graphite_loop_normal_form): Do not call
        number_of_iterations_exit from a gcc_assert.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/graphite@144455 138bc75d-0d04-0410-961f-82ee72b054a4